--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@capacitor/share": "^6.0.0",
-    "@headlessui/react": "^1.7.19",
+    "@headlessui/react": "^1.7.18",
     "@ionic/react": "^8.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
+    "embla-carousel-auto-height": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
     "ionicons": "^7.3.1",
     "lottie-react": "^2.4.0",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.16",
     "nextjs-toploader": "^1.6.12",
+    "onesignal-cordova-plugin": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
