--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "onesignal-cordova-plugin": "^5.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-easy-crop": "^5.0.7",
     "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
     "react-slick": "^0.30.2",
+    "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
