--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ionic/react": "^8.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@tanstack/react-query": "^5.37.1",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
     "embla-carousel-auto-height": "^8.0.2",
