--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-easy-crop": "^5.0.7",
     "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
+    "react-simple-pull-to-refresh": "^1.3.3",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1"
