--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-query": "^3.39.3",
     "react-simple-pull-to-refresh": "^1.3.3",
     "react-slick": "^0.30.2",
+    "react-swipeable": "^7.0.1",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1"
   },
