--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-webcam": "^7.2.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
