--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ionic/react": "^8.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "@tanstack/react-query": "^5.37.1",
     "@types/react-slick": "^0.23.13",
     "clsx": "^2.1.1",
@@ -37,6 +39,7 @@
     "react-swipeable": "^7.0.1",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^16.1.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
