--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@capacitor/share": "^6.0.0",
     "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^3.9.0",
     "@ionic/react": "^8.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
@@ -32,6 +33,7 @@
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-easy-crop": "^5.0.7",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.1.0",
     "react-query": "^3.39.3",
     "react-simple-pull-to-refresh": "^1.3.3",
@@ -40,6 +42,8 @@
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^16.1.0",
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
