--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.614.0",
     "@capacitor/share": "^6.0.0",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.9.0",
@@ -19,6 +20,7 @@
     "@stripe/stripe-js": "^4.1.0",
     "@tanstack/react-query": "^5.37.1",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "embla-carousel-auto-height": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
@@ -43,6 +45,7 @@
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^16.1.0",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
