Added date picker

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@capacitor/share": "^6.0.0",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "^3.5.4",
     "@ionic/react": "^8.0.1",
+    "@nextui-org/date-picker": "^2.1.2",
+    "@nextui-org/react": "^2.4.2",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "@stripe/react-stripe-js": "^2.7.3",
@@ -24,6 +27,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-auto-height": "^8.0.2",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.3.2",
     "html5-qrcode": "^2.3.8",
     "ionicons": "^7.3.1",
     "lottie-react": "^2.4.0",
