--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.1.0",
     "@tanstack/react-query": "^5.37.1",
+    "@tanstack/react-query-devtools": "^5.51.18",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
