--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.1.0",
     "react-image-crop": "^11.0.5",
+    "react-intersection-observer": "^9.13.0",
     "react-query": "^3.39.3",
     "react-simple-pull-to-refresh": "^1.3.3",
     "react-slick": "^0.30.2",
