--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": "next build && next start"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
@@ -46,6 +47,7 @@
     "react-simple-pull-to-refresh": "^1.3.3",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
+    "react-virtuoso": "^4.9.0",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^16.1.0",
